--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-pdf": "^7.7.0",
     "recharts": "^2.10.4"
   },
   "devDependencies": {
